package predictivo.model;

public interface Guardable {
	public Integer getId();
	
}
