CREATE TABLE USUARIO (
    ID INTEGER NOT NULL AUTO_INCREMENT,
    NOMBRE VARCHAR(50),
    APELLIDO VARCHAR(50),
    EMAIL VARCHAR(150),
	CLAVE_ENCRIPTADA VARCHAR(50),
    PRIMARY KEY (ID)
);

CREATE TABLE CATEGORIA (
    ID INTEGER NOT NULL AUTO_INCREMENT,
    NOMBRE VARCHAR(50),
    NOMBRE_INGLES VARCHAR(50),
    PRIMARY KEY (ID)
);

CREATE TABLE FRASE_USADA (
    ID INTEGER NOT NULL AUTO_INCREMENT,
    USUARIO_ID INTEGER,
    PESO INTEGER NOT NULL,
	PICTOGRAMA_IDS VARCHAR(250),
    PRIMARY KEY (ID),
    CONSTRAINT FK_FRASE_USADA_USUARIO FOREIGN KEY (USUARIO_ID) REFERENCES USUARIO(ID)
);

CREATE TABLE PICTOGRAMA (
    ID INTEGER NOT NULL AUTO_INCREMENT,
    IMAGEN VARCHAR(250),
    NOMBRE VARCHAR(50),
    AARASAC_ID INTEGER,
    FUNCION_SINTACTICA INTEGER,
    PRIMARY KEY (ID)
);

CREATE TABLE PICTOGRAMA_CATEGORIA (
    CATEGORIA_ID INTEGER NOT NULL AUTO_INCREMENT,
    PICTOGRAMA_ID INTEGER,
    PRIMARY KEY (CATEGORIA_ID, PICTOGRAMA_ID),
    CONSTRAINT FK_PICTOGRAMA_CATEGORIA_CATEGORIA FOREIGN KEY (CATEGORIA_ID) REFERENCES CATEGORIA(ID),
    CONSTRAINT FK_PICTOGRAMA_CATEGORIA_PICTOGRAMA FOREIGN KEY (PICTOGRAMA_ID) REFERENCES PICTOGRAMA(ID)
);

CREATE TABLE PREDICCION_PICTOGRAMA (
    ID INTEGER NOT NULL AUTO_INCREMENT,
    PICTOGRAMA_IDS INTEGER,
    PESO INTEGER,
    PRIMARY KEY (ID),
    CONSTRAINT FK_PREDICCION_PICTOGRAMA_PICTOGRAMA FOREIGN KEY (PICTOGRAMA_ID) REFERENCES PICTOGRAMA(ID)
);

CREATE TABLE FRASE_USADA_DW (
    PESO INTEGER NOT NULL,
	PICTOGRAMA_IDS VARCHAR(250) NOT NULL,
    PRIMARY KEY (PICTOGRAMA_IDS)
);

delimiter #
CREATE TRIGGER INSERTAR_FRASE_USADA_DW after insert on FRASE_USADA
FOR EACH ROW
BEGIN
  DECLARE picto_peso INTEGER;
  DECLARE existe BOOLEAN DEFAULT 0;
  SELECT 1
       INTO @existe
       FROM FRASE_USADA_DW 
       WHERE FRASE_USADA_DW.PICTOGRAMA_IDS = NEW.PICTOGRAMA_IDS;
 	IF @existe = 1
	THEN
		SELECT FRASE_USADA_DW.PESO
			INTO @picto_peso
			FROM FRASE_USADA_DW 
			WHERE FRASE_USADA_DW.PICTOGRAMA_IDS = NEW.PICTOGRAMA_IDS;
		UPDATE FRASE_USADA_DW 
			SET FRASE_USADA_DW.PESO = @picto_peso +1
			WHERE FRASE_USADA_DW.PICTOGRAMA_IDS = NEW.PICTOGRAMA_IDS;
	ELSE 
		INSERT INTO FRASE_USADA_DW (PESO, PICTOGRAMA_IDS) values (0, NEW.PICTOGRAMA_IDS);
    END IF;
END#
delimiter ;

delimiter #
CREATE TRIGGER UPDATEAR_FRASE_USADA_DW after update on FRASE_USADA
FOR EACH ROW
BEGIN
  DECLARE picto_peso INTEGER;
  DECLARE existe BOOLEAN DEFAULT 0;
  SELECT 1
       INTO @existe
       FROM FRASE_USADA_DW 
       WHERE FRASE_USADA_DW.PICTOGRAMA_IDS = NEW.PICTOGRAMA_IDS;
 	IF @existe = 1
	THEN
		SELECT FRASE_USADA_DW.PESO
			INTO @picto_peso
			FROM FRASE_USADA_DW 
			WHERE FRASE_USADA_DW.PICTOGRAMA_IDS = NEW.PICTOGRAMA_IDS;
		UPDATE FRASE_USADA_DW 
			SET FRASE_USADA_DW.PESO = @picto_peso +1
			WHERE FRASE_USADA_DW.PICTOGRAMA_IDS = NEW.PICTOGRAMA_IDS;
	ELSE 
		INSERT INTO FRASE_USADA_DW (PESO, PICTOGRAMA_IDS) values (0, NEW.PICTOGRAMA_IDS);
    END IF;
END#
delimiter ;

INSERT INTO USUARIO (NOMBRE, APELLIDO, EMAIL, CLAVE_ENCRIPTADA) VALUES ("Pepe", "Perez", "mi@mail.com", "6NJFknbaKhr9P4WeOtTrzQ==");

COMMIT;



